--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "deploy": "vite build && gh-pages -d build",
+    "deploy": "vite build && gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
