--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "animated-number-react": "^0.1.2",
+    "animated-number-react": "0.1.1",
     "classnames": "^2.3.1",
+    "number": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
